# Quantum-PyCell

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  post-build.sh  pycell.cpp  pycell.h  pycell_config.h
PyCell/: custom.cpp  custom.h
PyCell/Plugins/: pygal_panel.py
PyCell/Plugins/PyCell/: __init__.py  custom_cell.py  dataframe_cell.py  df_cell.py  logic_cell.py  projection_cell.py  pygal_cell.py  pylang_cell.py  registry.py  symengine_cell.py  sympy_cell.py  theano_cell.py  utility_cell.py
PyCell/Plugins/PyCell/tests/: test_all.py  test_dataframe_cell.py  test_logic_cell.py  test_projection_cell.py  test_pycell.py  test_symengine_cell.py  test_sympy_cell.py  test_utility_cell.py
tests/: test_boost_python.hpp
